# packit-service-fedmsg

./: .gitignore  .pre-commit-config.yaml  .zuul.yaml  CONTRIBUTING.md  Containerfile.tests  Dockerfile  Makefile  README.md  docker-compose.yml  ruff.toml  setup.cfg
.github/workflows/: build-and-push.yml
files/: install-deps.yaml  liveness.sh  recipe.yaml
packit_service/: fed_mes_consume.py
packit_service_fedmsg/: callbacks.py  cli.py  consumer.py  utils.py
tests/: spellbook.py  test_consumer.py  test_git_receive.py  test_koji.py  test_new_hotness_update.py  test_openscanhub_task_finished.py  test_openscanhub_tasks.py  test_pr_comment.py  test_utils.py
tests/data/: anitya_version_update.json  git_receive.json  koji_build_state_change.json  new_hotness_update.json  openscanhub_task_finished.json  openscanhub_task_started.json  pr_comment.json
tests/unit/: test_web_hook.py
